[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceflow"
version = "1.0.4"
authors = [
  { name="Daian Gan", email="daian@ganmedia.com" },
]
description = "A Python package for Voiceflow API."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Chat",
]

[project.urls]
"Homepage" = "https://github.com/daiangan/voiceflow-python"
"Bug Tracker" = "https://github.com/daiangan/voiceflow-python/issues"